fix(quotes): make quote preview public
